<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_head_bg_480_80" >

        <ImageButton
            android:id="@id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_keyword_submit_bg"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_return__left" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/report"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_keyword_submit_bg"
            android:text="@string/more_submit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdgeLength="0dp"
        android:scrollbars="@null" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_type"
                android:textColor="@color/gray_deep2"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <CheckBox
                    android:id="@+id/cbx1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_position_cbx_bg"
                    android:drawablePadding="5dp"
                    android:text="@string/report_type1"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cbx2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                     android:button="@null"
                    android:drawableLeft="@drawable/selector_position_cbx_bg"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/report_type2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cbx3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                     android:button="@null"
                    android:drawableLeft="@drawable/selector_position_cbx_bg"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/report_type3"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <CheckBox
                    android:id="@+id/cbx4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_position_cbx_bg"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/report_type4"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cbx5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_position_cbx_bg"
                    android:drawablePadding="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/report_type5"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_description"
                    android:textColor="@color/gray_deep2"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edi_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_feedback_content"
                android:gravity="top"
                android:hint="请说明情况"
                android:inputType="text|textMultiLine"
                android:padding="5dp"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_contact"
                    android:textColor="@color/gray_deep2"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_contact_notice"
                    android:textColor="@color/gray_deep2"
                    android:textSize="14sp" />
            </LinearLayout>
            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shap_edt_bg"
                android:gravity="left|center_vertical"
                android:hint="@string/report_contact_phone"
                android:digits="1234567890-"
                android:inputType="phone"
                android:padding="15dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/shap_edt_bg"
                android:digits="1234567890_-qwertyuiopasdfghjklzxcvbnm@."
                android:gravity="left|center_vertical"
                android:hint="@string/report_contact_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>