<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_head_bg_480_80"
        android:padding="10dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:background="@drawable/ic_return__left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ret_1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_more_btn_bg"
            android:text="@string/ret_2"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/login_userid_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/ret_3"
            android:maxLength="31"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/login_password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/ret_4"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/login_password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/ret_5"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

</LinearLayout>