<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_head_bg_480_80"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/login_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_return__left"
            android:layout_marginLeft="5dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reg_1"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/login_userid_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/reg_2"
            android:maxLength="31"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/login_password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/reg_3"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/login_password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/reg_4"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <EditText
            android:id="@+id/login_password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:digits="@string/check_login"
            android:gravity="left|center_vertical"
            android:hint="@string/reg_5"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="18dp"
            android:background="@drawable/selector_edu_add_bg"
            android:gravity="center_horizontal"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/reg_6"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />
    </LinearLayout>

</LinearLayout>